| Summary: | ASTERISK-27074: core_local: local channel data not being properly unref'ed and unlocked | ||||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |||
| Date Opened: | 2017-06-20 15:16:21 | Date Closed: | 2017-06-27 17:29:48 | ||
| Priority: | Major | Regression? | No | ||
| Status: | Closed/Complete | Components: | Core/Channels | ||
| Versions: | 13.16.0 14.5.0 | Frequency of Occurrence | Occasional | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | Back in Asterisk 13.8 a local channel lock all and unlock all function were added in order to keep a crash from occurring when a channel hung up too early during an attended transfer (see ASTERISK-25771).
Unfortunately, depending on the timing and when a transfer failure occurs, the local channels sometimes do not get properly unlocked and deref'ed after being locked and ref'ed. This then causes a deadlock situation on the channel in question. | ||||
| Comments: | |||||